--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "v-maxlength",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "author": "Youngsuk Yu",
   "repository": {
     "type": "git",
@@ -14,8 +14,9 @@
   "keywords": [
     "vue"
   ],
+  "files": ["dist"],
   "main": "dist/v-maxlength.umd.js",
-  "private": true,
+  "unpkg": "dist/v-maxlength.umd.min.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build --target lib --name v-maxlength ./src/main.js",
