--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "v-maxlength",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "author": "Youngsuk Yu",
   "repository": {
     "type": "git",
@@ -14,7 +14,9 @@
   "keywords": [
     "vue"
   ],
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "main": "dist/v-maxlength.umd.js",
   "unpkg": "dist/v-maxlength.umd.min.js",
   "scripts": {
@@ -23,14 +25,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.4.4",
+    "core-js": "^3.6.5",
     "vue": "^2.6.10"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.1.0",
-    "@vue/cli-plugin-eslint": "^4.1.0",
-    "@vue/cli-service": "^4.1.0",
-    "babel-eslint": "^10.0.3",
+    "@vue/cli-plugin-babel": "^4.3.1",
+    "@vue/cli-plugin-eslint": "^4.3.1",
+    "@vue/cli-service": "^4.3.1",
+    "babel-eslint": "^10.1.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "vue-template-compiler": "^2.6.10"
